View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0030583 | Open CASCADE | OCCT:DRAW | public | 2019-03-16 11:28 | 2019-04-08 12:18 |
Reporter | kgv | Assigned To | apn | ||
Priority | normal | Severity | integration request | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2015 | ||
Target Version | 7.4.0 | Fixed in Version | 7.4.0 | ||
Summary | 0030583: Draw Harness - ignore cpulimit when Debugger is attached on Windows platform | ||||
Description | cpulimit has no meaning when Debugger is attached. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR30583 has been created by kgv. SHA-1: 98c23080753c9461f9a3bafb1e563040b8786e2e Detailed log of new commits: Author: kgv Date: Sat Mar 16 11:25:47 2019 +0300 0030583: Draw Harness - ignore cpulimit when Debugger is attached on Windows platform cpulimit now omits ExitProcess() when IsDebuggerPresent() returns TRUE. |
|
Patch is ready for review. |
|
Reviewed. |
|
Tested with IR-WEEK12: Combination - OCCT branch : IR-WEEK12 master SHA - 667b5eb81bdae7c15143ab7c0ed5617f503e9fb9 d67d4b811012eef8913d3c535c29654d0acf3c4c Products branch : IR-WEEK12 SHA - 63ea473ef04f4f06e4baccecde3b9b8fd4a069a3 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 16635.159999999974 / 16593.449999999997 [+0.25%] Products Total CPU difference: 9137.080000000038 / 9102.210000000046 [+0.38%] Windows-64-VC14: OCCT Total CPU difference: 18008.0 / 17984.46875 [+0.13%] Products Total CPU difference: 10596.421875 / 10609.28125 [-0.12%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR30583 has been deleted by inv. SHA-1: 98c23080753c9461f9a3bafb1e563040b8786e2e |
Date Modified | Username | Field | Change |
---|---|---|---|
2019-03-16 11:28 | kgv | New Issue | |
2019-03-16 11:28 | kgv | Assigned To | => apn |
2019-03-16 11:32 | git | Note Added: 0083012 | |
2019-03-16 11:32 | kgv | Note Added: 0083013 | |
2019-03-16 11:32 | kgv | Assigned To | apn => abv |
2019-03-16 11:32 | kgv | Severity | minor => integration request |
2019-03-16 11:32 | kgv | Status | new => resolved |
2019-03-18 22:13 | kgv | Assigned To | abv => msv |
2019-03-20 18:52 | msv | Note Added: 0083154 | |
2019-03-20 18:52 | msv | Assigned To | msv => bugmaster |
2019-03-20 18:52 | msv | Status | resolved => reviewed |
2019-03-21 12:24 | apn | Test case number | => Not needed |
2019-03-21 12:24 | apn | Note Added: 0083179 | |
2019-03-21 12:24 | apn | Status | reviewed => tested |
2019-03-24 18:54 | apn | Changeset attached | => occt master 667b5eb8 |
2019-03-24 18:54 | apn | Assigned To | bugmaster => apn |
2019-03-24 18:54 | apn | Status | tested => verified |
2019-03-24 18:54 | apn | Resolution | open => fixed |
2019-04-08 12:18 | git | Note Added: 0083504 |