0030583: Draw Harness - ignore cpulimit when Debugger is attached on Windows platform

cpulimit now omits ExitProcess() when IsDebuggerPresent() returns TRUE.